# Picgenius

./: .gitignore  README.md  picgenius-yassine.yml  picgenius.conf  picgenius.yml  pyproject.toml  script.py  setup.cfg  setup.py
picgenius/: __init__.py  __main__.py  _old_format_generator.py  _old_mockup_generator.py  cli.py  controller.py  generator.py  processing.py  utils.py
picgenius/config/: loader.py  reader.py
picgenius/models/: __init__.py  design.py  mockup.py  product.py  product_type.py  template.py  video_settings.py  watermark.py
picgenius/pic_generator/: __init__.py  defaults.py  design.py  generator.py  image_processing.py  mockup.py  mockup_generator.py  template.py  utils.py  video.py  watermark.py
picgenius/renderers/: __init__.py  controller.py  design.py  product.py  template.py  video.py
schematics/: ai-design-automation-process.drawio  ai-design-products.drawio  generating-mockup-flowchart.drawio  picgenius_class_diagram.drawio  process-geneate-images.drawio
src/picgenius/: __init__.py  __main__.py  cli.py  controller.py  logger.py  processing.py  utils.py
src/picgenius/config/: loader.py
src/picgenius/models/: __init__.py  product.py  product_type.py  template.py  video_settings.py  watermark.py
src/picgenius/renderers/: __init__.py  design.py  product.py  template.py  watermark.py
tests/: picgenius.yml  test_processing.py
tests/test_config/: test_loader.py
tests/test_renderers/: test_product.py  test_template.py  test_video.py  test_watermark.py
