[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.3.1",
]

[project]
name = "Picgenius"
version = "0.1.8"
description = "Command line tool to generate product visuals"
authors = [
    {name = "JeremyLP", email = "jeremyleprunenec.pro@gmail.com"},
]
dependencies = [
    "Pillow>=9.4.0",
    "moviepy>=1.0.3",
    "setuptools>=67.5.0",
    "click>=8.1.3",
    "PyYAML>=6.0",
    "RealESRGAN @ git+https://github.com/sberbank-ai/Real-ESRGAN.git",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.pytest.ini_options]
pythonpath = "src"


[tool.pdm.scripts]
picgenius.cmd = "python -m picgenius"
picgenius.env = {PYTHONPATH = "src"}
test = "pytest -s"

[build-system]
requires = ["setuptools>=67.5.0", "wheel"]
build-backend = "setuptools.build_meta"