[metadata]
name = picgenius
version = attr: picgenius.__version__
author = JeremyLP Hackhim
author_email = jeremyleprunenec.pro@gmail.com
description = picgenius: Command line tool to generate product visuals
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Hackhim/Picgenius

[options]
package_dir =
	picgenius = .
packages = find:
python_requires = >=3.10
install_requires =
	Pillow
    moviepy
    setuptools
    click
    PyYAML
    
[options.packages.find]
where = .

[options.entry_points]
console_scripts =
	picgenius=picgenius.__main__:main